version 1.4.26 - add endpoint remove avatar
