# src/modules/users/routers/user.router.ts
@@ -18,4 +18,5 @@ userRouter.get("/:id", validateUserId, userController.showUser)
 userRouter.get("/list/:role", userAuthorization(["admin"]), userController.index)
 userRouter.patch("/:id", validateUserId, upload.single('file'), userController.update)
 userRouter.delete("/:id", validateUserId, userAuthorization(["admin", "customer"]), userController.remove)
+userRouter.delete("/avatar/:id", validateUserId, userController.removeAvatar)
 
